fixed spacing error with the images on the portfolio page

--- a/css/style.css
+++ b/css/style.css
@@ -114,11 +114,10 @@ nav a:first-child {
 }
 
 .auth-image {
-  width: 200px;
+  width: 100%;
   height: 200px;
   margin-top: 10px;
   float: left;
-  margin-right: 25px;
 }
 
 .auth-image:hover {
@@ -222,7 +221,6 @@ footer {
 
 .work h3,
 .project-image h3 {
-  height: px;
   border-bottom: 0;
   background: #4aaaa5;
   color: #fff;
@@ -233,6 +231,7 @@ footer {
   width: 100%;
   line-height: 30px;
   padding-left: 35px;
+  margin-left: 0px;
   margin-bottom: 0px;
   font-weight: 300;
 }
